--- a/src/components/qAndACard/qAndACard.css
+++ b/src/components/qAndACard/qAndACard.css
@@ -7,7 +7,7 @@
 	}
 
 	p {
-		color: lch(from var(--font-color) l c h / 90%);
+		color: rgb(from var(--font-color) r g b / 90%);
 		font-size: 1.3rem;
 	}
 
