--- a/src/style.css
+++ b/src/style.css
@@ -119,6 +119,29 @@
 		}
 	}
 
+	article {
+		p:nth-child(1) {
+			&::first-letter {
+				initial-letter: 3;
+			}
+		}
+		p:nth-child(2) {
+			&::first-letter {
+				initial-letter: 3 1;
+			}
+		}
+		p:nth-child(3) {
+			&::first-letter {
+				initial-letter: 3 2;
+			}
+		}
+		p:nth-child(4) {
+			&::first-letter {
+				initial-letter: 3 4;
+			}
+		}
+	}
+
 	.popover {
 		width: 90%;
 		max-width: 478px;
