--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,11 @@
 	--font-color: #a259f7;
 }
 
+::highlight(search-results) {
+	background-color: color-mix(in srgb, var(--font-color), white 85%);
+	color: var(--font-color);
+}
+
 @layer reset {
 	/* 1. Use a more-intuitive box-sizing model */
 	*,
@@ -143,10 +148,12 @@
 	}
 
 	.popover {
+		visibility: hidden;
 		width: 90%;
 		max-width: 478px;
 		padding: 1em;
 		display: flex;
+
 		flex-direction: column;
 		align-self: center;
 		align-items: center;
@@ -156,12 +163,14 @@
 		border-radius: 15px;
 		color: #fff;
 		opacity: 0;
-		transform: scale(0.8); /* Example: start smaller */
-		transition: opacity 0.1s ease-out, transform 0.1s ease-out;
+		transform: scale(0.8);
 
 		&:popover-open {
+			visibility: visible;
 			opacity: 1;
 			transform: scale(1);
+
+			transition: opacity 0.1s ease-out, transform 0.1s ease-out;
 		}
 	}
 }
